# rpmsg-lite

./: .gitignore  CMakeLists.txt
cmake/: common.cmake  gtest.cmake  zephyr.cmake
lib/include/: remoteproc.h  rpmsg_compiler.h  rpmsg_default_config.h  rpmsg_env.h  rpmsg_lite.h  rpmsg_trace.h  rsc_table.h  virtio_ring.h  virtqueue.h
lib/include/environment/linux_simulation/: rpmsg_env_linux.h
lib/include/environment/zephyr/: rpmsg_env_specific.h
lib/include/platform/imx8mm_ca53/: rpmsg_platform.h
lib/include/platform/imx8mn_a53/: rpmsg_platform.h
lib/include/platform/imx8mn_m7/: rpmsg_platform.h
lib/include/platform/lpc55s69/: rpmsg_platform.h
lib/include/platform/simulation/: rpmsg_config.h  rpmsg_platform.h  threadsafequeue.h
lib/rpmsg_lite/: rpmsg_lite.c  rpmsg_queue.c
lib/rpmsg_lite/porting/environment/: rpmsg_env_zephyr.c
lib/rpmsg_lite/porting/environment/baremetal/: rpmsg_env_bm.c
lib/rpmsg_lite/porting/environment/freertos/: rpmsg_env_freertos.c
lib/rpmsg_lite/porting/environment/linux_sim/: rpmsg_env_linux_sim.c  rpmsg_env_linux_sim.cpp
lib/rpmsg_lite/porting/environment/littlekernel/: rpmsg_env_lk.c
lib/rpmsg_lite/porting/environment/qnx/: rpmsg_env_qnx.c
lib/rpmsg_lite/porting/environment/threadx/: rpmsg_env_threadx.c
lib/rpmsg_lite/porting/environment/zephyr/: rpmsg_env_zephyr.c  rpmsg_env_zephyr_helpers.c
lib/rpmsg_lite/porting/platform/imx6sx_m4/: rpmsg_platform.c  rpmsg_platform_zephyr_ipm.c
lib/rpmsg_lite/porting/platform/imx7d_m4/: rpmsg_platform.c  rpmsg_platform_zephyr_ipm.c
lib/virtio/: rsc_table.c  virtqueue.c
test/: CMakeLists.txt  runTests.sh
test/lib/: CMakeLists.txt  rpmsgtesters.cpp  rpmsgtesters.h  test_rpmsg_lite.cpp
(+17 files in other folders)
